<resources>
    <string name="app_name">SteamWhistle</string>
    <string name="settings_button">Settings button.</string>
    <string name="add_button">Add button.</string>
    <string name="okay">Okay</string>
    <string name="dollars_template">$%1$s</string>
    <string name="item_threshold_template">Threshold: $%1$s</string>
    <string name="back_button">Back button.</string>
    <string name="search_button">Search button.</string>
    <string name="add_to_watchlist_search_prompt">Search for games to add.</string>
    <string name="channel_name">SteamWhistle Notification</string>
    <string name="channel_description">For all SteamWhistle notifications</string>
    <string name="channel_id">whistle_channel_id</string>
    <string name="msg_token_fmt">Token: %s</string>
    <string name="game_already_added">%1$s is already on your watchlist.</string>
    <string name="game_added">Added %1$s to your watchlist.</string>
    <string name="email">me@gmail.com</string>
    <string name="password">enter the password</string>
    <string name="confirm_password">enter the password again</string>
    <string name="already_have_an_account">Already have an account</string>
    <string name="register_for_an_account">Create an account</string>
    <string name="register">Register</string>
    <string name="login">Login</string>
    <string name="logout">logout</string>
    <string name="welcome">Welcome to SteamWhistle! Please enter your details to make an account and start using the app.</string>
    <string name="welcome_back">Welcome back! Enter your email and password to access your watchlist.</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="save">Save</string>
    <string name="current_threshold">Current Threshold</string>
    <string name="current_price">Current Price</string>
    <string name="details_tip">Here you can view and edit game details. To edit the notification threshold tap on the threshold!</string>
    <string name="back_message">Any unsaved changes will be lost. Are you sure you want to go back?</string>
</resources>